--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "aws-sdk": "^2.1692.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -27,6 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "moment-timezone": "^0.5.45",
     "mongoose": "^8.7.0",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "swagger-ui-express": "^5.0.1",
     "twilio": "^5.3.4",
