--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js",
+    "build": "node node_modules/typescript/bin/tsc",
+    "start": "npm run build && node build/server.js",
     "dev": "nodemon --exec ts-node server.ts",
-    "watch": "tsc -w"
+    "watch": "tsc -w",
+    "server": "nodemon build/server.js"
   },
   "keywords": [],
   "author": "Pramit Mangukiya",
@@ -28,6 +29,7 @@
     "jsonwebtoken": "^9.0.2",
     "moment-timezone": "^0.5.45",
     "mongoose": "^8.7.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "swagger-ui-express": "^5.0.1",
